# docs/swagger.json
@@ -571,20 +571,21 @@
                         "type": "number",
                         "description": "enter product sell price",
                         "name": "sell_price",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "description": "category ID",
                         "name": "category_id",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "file",
                         "description": "image",
                         "name": "image",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -636,6 +637,42 @@
             }
         },
         "/products/{product_id}": {
+            "get": {
+                "description": "show  Product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "show  Product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "product_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Product"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/output.HTTPError"
+                        }
+                    }
+                }
+            },
             "patch": {
                 "description": "Update  Product",
                 "consumes": [
@@ -674,13 +711,15 @@
                         "type": "number",
                         "description": "enter product sell price",
                         "name": "sell_price",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "description": "category ID",
                         "name": "category_id",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "file",
@@ -944,6 +983,12 @@
                 "name": {
                     "type": "string",
                     "example": "category1"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Product"
+                    }
                 }
             }
         },
@@ -993,12 +1038,21 @@
                 "name": {
                     "type": "string",
                     "example": "category1"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Product"
+                    }
                 }
             }
         },
         "model.Product": {
             "type": "object",
             "properties": {
+                "category": {
+                    "$ref": "#/definitions/model.Category"
+                },
                 "category_id": {
                     "type": "integer",
                     "example": 1
@@ -1018,6 +1072,12 @@
                 "image": {
                     "type": "string",
                     "example": "http://lorempicsm/100.jpg"
+                },
+                "inventories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Product"
+                    }
                 },
                 "name": {
                     "type": "string",
